# RESTY

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUTO_CYCLE_FEATURE.md  DESKTOP_APP.md  DEVELOPMENT.md  IPv6权限问题解决.md  LATEST_FIXES.md  README.md  WINDOWS.md  break-reminder.html  build.bat  cliff.toml  index.html  latest.json  package.json  pnpm-lock.yaml  requirements.md  start-dev.bat  vite.config.ts  开发完成总结.md  快速开始.md  最终解决方案.md  端口问题解决.md
.github/workflows/: build.yml
public/: break-reminder.html
public/locales/en/: translation.json
public/locales/en-GB/: translation.json
public/locales/en-US/: translation.json
public/locales/zh-CN/: translation.json
public/locales/zh-TW/: translation.json
scripts/ci/: prepare-release-version.mjs
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  tray-menu.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: database.rs  mod.rs  power.rs  remote.rs  timer.rs  updater.rs
src-tauri/src/utils/: error.rs
src/components/Common/: Layout.css  Layout.tsx  Navigation.css  Navigation.tsx  ThemeProvider.tsx  WindowControls.tsx
src/i18n/: index.ts
src/pages/: Achievements.css  Achievements.tsx  Analytics.css  Analytics.tsx  DailyReport.css  DailyReport.tsx  Dashboard.css  Dashboard.tsx  Settings.css  Settings.tsx
src/services/: notifications.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: analytics.ts  api.ts  tray.ts  version.ts
(+12 files in other folders)
