[package]
name = "resty"
version = "0.1.9"
description = "Forget your work, resty!"
authors = ["youtonghy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
dark-light = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
] }
